fix: Prevent mobile horizontal scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@ html {
   margin: 6px;
   padding: 10px;
   min-width: 360px;
+  width: calc(100% - 12px);
   height: calc(100% - 12px);
   overflow-x: hidden;
 }
